@@ -15,7 +15,7 @@
  */
 plugins {
     id 'java-library'
-    id 'nullaway.jacoco-conventions'
+    id 'nullaway.java-test-conventions'
 }
 
 // Use JDK 17 for this module, via a toolchain
@@ -44,22 +44,17 @@ dependencies {
 }
 
 test {
-    maxHeapSize = "1024m"
-    // to expose necessary JDK types on JDK 16+; see https://errorprone.info/docs/installation#java-9-and-newer
     jvmArgs += [
-            "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-            "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-            "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-            "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
-            "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-            "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-            "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-            "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-            // Expose a module path for tests as a JVM property.
-            // Used by com.uber.nullaway.jdk17.NullAwayModuleInfoTests
-            "-Dtest.module.path=${configurations.testModulePath.asPath}"
+        // Expose a module path for tests as a JVM property.
+        // Used by com.uber.nullaway.jdk17.NullAwayModuleInfoTests
+        "-Dtest.module.path=${configurations.testModulePath.asPath}"
     ]
 }
 
+tasks.getByName('testJdk21').configure {
+    jvmArgs += [
+        // Expose a module path for tests as a JVM property.
+        // Used by com.uber.nullaway.jdk17.NullAwayModuleInfoTests
+        "-Dtest.module.path=${configurations.testModulePath.asPath}"
+    ]
+}
